Fix links in navigation to use 'page/' prefix

--- a/Day 1/main.html
+++ b/Day 1/main.html
@@ -14,16 +14,16 @@
     <nav>
         <h2>Explore Topics</h2>
         <ul>
-             <a href="pages/introduction.html">Intro</a>
-             <a href="pages/frontend.html">Frontend</a>    |
-             <a href="pages/backend.html">Backend</a>    |
-             <a href="pages/database.html">Database</a>    |
-             <a href="pages/devops.html">DevOps & CI/CD</a>    |
-             <a href="pages/testing.html">Software Testing</a>    |
-             <a href="pages/cloud.html">Cloud Computing</a>    |
-             <a href="pages/security.html">Cyber Security</a>    |
-             <a href="pages/ai-ml.html">AI & ML </a>    |
-             <a href="pages/career.html">Developer Paths</a>    |
+             <a href="page/introduction.html">Intro</a>
+             <a href="page/frontend.html">Frontend</a>    |
+             <a href="page/backend.html">Backend</a>    |
+             <a href="page/database.html">Database</a>    |
+             <a href="page/devops.html">DevOps & CI/CD</a>    |
+             <a href="page/testing.html">Software Testing</a>    |
+             <a href="page/cloud.html">Cloud Computing</a>    |
+             <a href="page/security.html">Cyber Security</a>    |
+             <a href="page/ai-ml.html">AI & ML </a>    |
+             <a href="page/career.html">Developer Paths</a>    |
         </ul>
     </nav>
 
