--- a/main.html
+++ b/main.html
@@ -14,16 +14,16 @@
     <nav>
         <h2>Explore Topics</h2>
         <ul>
-             <a href="page/introduction.html">Intro</a>
-             <a href="page/frontend.html">Frontend</a>    |
-             <a href="page/backend.html">Backend</a>    |
-             <a href="page/database.html">Database</a>    |
-             <a href="page/devops.html">DevOps & CI/CD</a>    |
-             <a href="page/testing.html">Software Testing</a>    |
-             <a href="page/cloud.html">Cloud Computing</a>    |
-             <a href="page/security.html">Cyber Security</a>    |
-             <a href="page/ai-ml.html">AI & ML </a>    |
-             <a href="page/career.html">Developer Paths</a>    |
+             <a href="Day 1/page/introduction.html">Intro</a>
+             <a href="Day 1/page/frontend.html">Frontend</a>    |
+             <a href="Day 1/page/backend.html">Backend</a>    |
+             <a href="Day 1/page/database.html">Database</a>    |
+             <a href="Day 1/page/devops.html">DevOps & CI/CD</a>    |
+             <a href="Day 1/page/testing.html">Software Testing</a>    |
+             <a href="Day 1/page/cloud.html">Cloud Computing</a>    |
+             <a href="Day 1/page/security.html">Cyber Security</a>    |
+             <a href="Day 1/page/ai-ml.html">AI & ML </a>    |
+             <a href="Day 1/page/career.html">Developer Paths</a>    |
         </ul>
     </nav>
 
