Refactor website structure: remove about, contact, courses, and index pages; update logo and audio files; modify CSS for improved layout and responsiveness.

--- a/Day_3/task/website/contact.html
+++ b/Day_3/task/website/contact.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Contact — TechSolutions Institute</title>
-    <meta name="description" content="Get in touch with TechSolutions Institute for admissions, partnerships and general inquiries">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact TechSolutions Institute - Get in touch for admissions, partnerships, and inquiries">
+    <meta name="keywords" content="contact, admissions, tech training, software courses">
+    <title>Contact Us - TechSolutions Institute</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Pure HTML only: no scripts included -->
 </head>
-<body>
-
     <header class="header">
         <div class="header-container">
             <div class="logo-section">
-                <img src="logo.png" alt="TechSolutions Institute" class="logo">
+                <img src="logo.png" alt="TechSolutions Institute Logo" class="logo">
             </div>
             <div class="title-section">
                 <h1 class="college-title">TechSolutions Institute</h1>
@@ -33,69 +31,120 @@
 
     <main class="main-content">
         <section class="hero-section">
-            <h2>Contact Us</h2>
-            <p>Questions about admissions, courses or partnerships? Reach out — our team responds within one business day.</p>
+            <h2>Get In Touch</h2>
+            <p>Ready to start your journey in technology? We're here to help you every step of the way. Reach out to us for admissions, course information, or partnership opportunities.</p>
         </section>
 
-        <section class="contact-grid">
-            <div class="contact-card">
-                <h3>Visit Our Campus</h3>
-                <p><strong>TechSolutions Institute</strong></p>
-                <address>
-                    123 Innovation Drive<br>
-                    Tech Park, Bengaluru<br>
-                    Karnataka 560001, India
-                </address>
+        <section class="contact-info-section">
+            <div class="contact-grid">
+                <article class="contact-card">
+                    <h3>📍 Visit Our Campus</h3>
+                    <div class="contact-details">
+                        <p><strong>TechSolutions Institute</strong></p>
+                        <p>123 Innovation Drive, Tech Park</p>
+                        <p>Bengaluru, Karnataka 560001</p>
+                        <p>India</p>
+                    </div>
+                </article>
 
-                <h4>Office Hours</h4>
-                <p>Mon–Fri: 09:00 — 19:00 IST<br>
-                     Sat: 09:00 — 17:00 IST<br>
-                     Sun: Closed</p>
+                <article class="contact-card">
+                    <h3>📞 Call Us</h3>
+                    <div class="contact-details">
+                        <p><strong>Admissions Helpline:</strong></p>
+                        <p>+91 9876543210</p>
+                        <p><strong>Corporate Partnerships:</strong></p>
+                        <p>+91 9876543211</p>
+                    </div>
+                </article>
 
-                <h4>Contact</h4>
-                <p>Admissions: <a href="mailto:admissions@techsolutions.edu">admissions@techsolutions.edu</a><br>
-                     General: <a href="mailto:info@techsolutions.edu">info@techsolutions.edu</a><br>
-                     Phone: <a href="tel:+919876543210">+91 98765 43210</a></p>
+                <article class="contact-card">
+                    <h3>📧 Email Us</h3>
+                    <div class="contact-details">
+                        <p><strong>Admissions:</strong></p>
+                        <p>admissions@techsolutions.edu</p>
+                        <p><strong>General Inquiries:</strong></p>
+                        <p>info@techsolutions.edu</p>
+                        <p><strong>Partnerships:</strong></p>
+                        <p>partnerships@techsolutions.edu</p>
+                    </div>
+                </article>
 
-                <h4>Find us</h4>
-                <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.8!2d77.5946!3d12.9716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTLCsDU4JzE3LjgiTiA3N8KwMzUnNDAuNiJF!5e0!3m2!1sen!2sin!4v1634567890123!5m2!1sen!2sin" width="100%" height="220" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
+                <article class="contact-card">
+                    <h3>🕒 Office Hours</h3>
+                    <div class="contact-details">
+                        <p><strong>Monday - Friday:</strong></p>
+                        <p>9:00 AM - 7:00 PM IST</p>
+                        <p><strong>Saturday:</strong></p>
+                        <p>9:00 AM - 5:00 PM IST</p>
+                        <p><strong>Sunday:</strong></p>
+                        <p>Closed (Emergency support only)</p>
+                    </div>
+                </article>
             </div>
+        </section>
 
-            <div class="contact-card">
+        <section class="inquiry-section">
+            <div class="inquiry-container">
                 <h3>Send Us a Message</h3>
-                <p>Use the form below for enquiries — required fields are marked.</p>
+                <p>Have questions about our programs, admission process, or need personalized guidance? Drop us a message and we'll get back to you within 24 hours.</p>
 
                 <form class="contact-form" action="#" method="post">
-                    <label for="name">Full name *</label>
-                    <input type="text" id="name" name="name" required>
-
-                    <label for="email">Email address *</label>
-                    <input type="email" id="email" name="email" required>
-
-                    <label for="phone">Phone</label>
-                    <input type="tel" id="phone" name="phone" pattern="[0-9+\-() ]{7,}" title="Enter a valid phone number">
-
-                    <label for="subject">Subject</label>
-                    <input type="text" id="subject" name="subject">
-
-                    <label for="message">Message *</label>
-                    <textarea id="message" name="message" rows="6" required></textarea>
-
-                    <div class="form-actions">
-                        <button type="submit" class="submit-btn">Send Message</button>
-                        <button type="reset" class="reset-btn">Clear</button>
+                    <div class="form-group">
+                        <label for="name">Full Name *</label>
+                        <input type="text" id="name" name="name" required>
                     </div>
+
+                    <div class="form-group">
+                        <label for="email">Email Address *</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" id="phone" name="phone">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="subject">Subject *</label>
+                        <select id="subject" name="subject" required>
+                            <option value="">Select a subject</option>
+                            <option value="admissions">Admissions Inquiry</option>
+                            <option value="courses">Course Information</option>
+                            <option value="partnerships">Corporate Partnerships</option>
+                            <option value="support">Technical Support</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Message *</label>
+                        <textarea id="message" name="message" rows="6" required placeholder="Tell us how we can help you..."></textarea>
+                    </div>
+
+                    <button type="submit" class="submit-btn">Send Message</button>
                 </form>
+            </div>
+        </section>
+
+        <section class="map-section">
+            <h3>Find Us</h3>
+            <div class="map-container">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.8!2d77.5946!3d12.9716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTLCsDU4JzE3LjgiTiA3N8KwMzUnNDAuNiJF!5e0!3m2!1sen!2sin!4v1634567890123!5m2!1sen!2sin"
+                    width="100%"
+                    height="400"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy">
+                </iframe>
             </div>
         </section>
 
         <section class="cta-section">
             <div class="cta-content">
-                <h3>Ready to Start?</h3>
-                <p>Explore our programs and start your professional journey in tech today.</p>
-                <a href="courses.html" class="cta-button">View Courses</a>
+                <h3>Ready to Start Your Tech Journey?</h3>
+                <p>Join thousands of successful graduates who have transformed their careers with TechSolutions Institute.</p>
+                <a href="courses.html" class="cta-button">Explore Our Courses</a>
             </div>
         </section>
     </main>
@@ -103,11 +152,13 @@
     <footer class="footer">
         <div class="footer-content">
             <p class="footer-contact">
-                <span class="footer-item">📞 +91 98765 43210</span>
+                <span class="footer-item">📞 +91 9876543210</span>
                 <span class="footer-separator">|</span>
                 <span class="footer-item">📧 info@techsolutions.edu</span>
             </p>
-            <p class="footer-copyright">© 2026 TechSolutions Institute. All rights reserved.</p>
+            <p class="footer-copyright">
+                © 2026 TechSolutions Institute. All Rights Reserved.
+            </p>
         </div>
     </footer>
 
